specs/blueprints/errors/validation/expected_fieldset_got_field.eno
# Expecting a fieldset but getting a field

-- input
field: value
-- input

-- javascript
enolib.parse(input).fieldset('field');
-- javascript

-- php
Enolib\Parser::parse($input)->fieldset('field');
-- php

-- python
enolib.parse(input).fieldset('field')
-- python

-- ruby
Enolib.parse(input).fieldset('field')
-- ruby

## ValidationError

-- text
A fieldset with the key 'field' was expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
-- snippet

selection: [0,0] => [0,12]


# Expecting a fieldset but getting a field with continuations

-- input
field:
| continuation
| continuation
-- input

-- javascript
enolib.parse(input).fieldset('field');
-- javascript

-- php
Enolib\Parser::parse($input)->fieldset('field');
-- php

-- python
enolib.parse(input).fieldset('field')
-- python

-- ruby
Enolib.parse(input).fieldset('field')
-- ruby

## ValidationError

-- text
A fieldset with the key 'field' was expected.
-- text

-- snippet
   Line | Content
 >    1 | field:
 *    2 | | continuation
 *    3 | | continuation
-- snippet

selection: [0,0] => [2,14]

# Expecting a fieldset but getting a field with continuations separated by idle lines

-- input
field: value
| continuation
| continuation

> comment
| continuation
-- input

-- javascript
enolib.parse(input).fieldset('field');
-- javascript

-- php
Enolib\Parser::parse($input)->fieldset('field');
-- php

-- python
enolib.parse(input).fieldset('field')
-- python

-- ruby
Enolib.parse(input).fieldset('field')
-- ruby

## ValidationError

-- text
A fieldset with the key 'field' was expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
 *    2 | | continuation
 *    3 | | continuation
 *    4 | 
 *    5 | > comment
 *    6 | | continuation
-- snippet

selection: [0,0] => [5,14]
